// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`python full integration 3rd party synth generates HCL 1`] = `
"terraform {
  required_providers {
    docker = {
      version = "2.16.0"
      source  = "kreuzwerker/docker"
    }
  }
  backend "local" {
    path = "terraform.tfstate"
  }


}

provider "docker" {
}
resource "docker_image" "nginxImage" {
  keep_locally = true
  name         = "nginx:latest"
}
resource "docker_container" "nginxContainer" {
  image      = "\${docker_image.nginxImage.repo_digest}"
  name       = "nginx-python-cdktf"
  privileged = "\${docker_image.nginxImage.keep_locally}"
  ports {
    external = 8000
    internal = 80
  }
}

output "containerCapAdd" {
  value = "\${tolist(docker_container.nginxContainer.capabilities[0].add)}"
}"
`;

exports[`python full integration 3rd party synth generates JSON 1`] = `
"{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "references",
      "version": "stubbed"
    },
    "outputs": {
      "references": {
        "containerCapAdd": "containerCapAdd"
      }
    }
      backend "local" {
        path = "terraform.tfstate"
      }


    }

    provider "docker" {
    }
    resource "docker_image" "nginxImage" {
      keep_locally = true
      name         = "nginx:latest"
    }
    resource "docker_container" "nginxContainer" {
      image      = "\${docker_image.nginxImage.repo_digest}"
      name       = "nginx-python-cdktf"
      privileged = "\${docker_image.nginxImage.keep_locally}"
      ports {
        external = 8000
        internal = 80
      }
    }

    output "containerCapAdd" {
      value = "\${tolist(docker_container.nginxContainer.capabilities[0].add)}"
    }"
`;
